--- a/stylesheet.css
+++ b/stylesheet.css
@@ -80,6 +80,7 @@ header .fa-bars{
 /*main-page*/
 .main-page{
   padding-left: 3%;
+  padding-right: 3%;
   margin-bottom: 100px;
 }
 
@@ -108,7 +109,8 @@ header .fa-bars{
 
 /*contact*/
 .contact{
-  margin-left: 3%;
+  padding-left: 3%;
+  padding-right: 3%;
 }
 
 .contact h3{
